--- a/front/src/app/views/my-courses/my-courses.component.html
+++ b/front/src/app/views/my-courses/my-courses.component.html
@@ -1,78 +1,26 @@
 <body class="card-flex">
-    <div class="card-container">
-        <a href="/" class="hero-image-container">
-          <img class="hero-image" src="https://i.postimg.cc/NfR2yhNs/image-equilibrium.jpg" alt="Spinning glass cube"/>
-        </a>
-        <main class="main-content">
-          <h1><a href="#">Equilibrium #3429</a></h1>
-          <p>Our Equilibrium collection promotes balance and calm.</p>
-          <div class="flex-row">
-            <div class="coin-base">
-              <img src="https://i.postimg.cc/T1F1K0bW/Ethereum.png" alt="Ethereum" class="small-image"/>
-              <h2>0.041 ETH</h2>
-            </div>
-            <div class="time-left">
-              <img src="https://i.postimg.cc/prpyV4mH/clock-selection-no-bg.png" alt="clock" class="small-image"/>
-              <p>3 days left</p>
-            </div>
-          </div>
-        </main>
-        <div class="card-attribute">
-          <img src="https://i.postimg.cc/SQBzNQf1/image-avatar.png" alt="avatar" class="small-avatar"/>
-          <p>Creation of <span><a href="#">Jules Wyvern</a></span></p>
+  <div *ngFor="let course of courses" class="card-container">
+    <a href="/" class="hero-image-container">
+      <img class="hero-image" src="https://i.postimg.cc/NfR2yhNs/image-equilibrium.jpg" alt="Course Image"/>
+    </a>
+    <main class="main-content">
+      <h1><a href="#">{{ course.name }}</a></h1>
+      <p>{{ course.description }}</p>
+      <div class="flex-row">
+        <div class="coin-base">
+          <img src="https://i.postimg.cc/T1F1K0bW/Ethereum.png" alt="Ethereum" class="small-image"/>
+          <h2>{{ course.category }}</h2>
+        </div>
+        <div class="time-left">
+          <img src="https://i.postimg.cc/prpyV4mH/clock-selection-no-bg.png" alt="clock" class="small-image"/>
+          <p *ngIf="course.active; else inactive">Activo</p>
+          <ng-template #inactive><p>Inactivo</p></ng-template>
         </div>
       </div>
-  
-   
-    <div class="card-container">
-        <a href="/" class="hero-image-container">
-          <img class="hero-image" src="https://i.postimg.cc/NfR2yhNs/image-equilibrium.jpg" alt="Spinning glass cube"/>
-        </a>
-        <main class="main-content">
-          <h1><a href="#">Equilibrium #3429</a></h1>
-          <p>Our Equilibrium collection promotes balance and calm.</p>
-          <div class="flex-row">
-            <div class="coin-base">
-              <img src="https://i.postimg.cc/T1F1K0bW/Ethereum.png" alt="Ethereum" class="small-image"/>
-              <h2>0.041 ETH</h2>
-            </div>
-            <div class="time-left">
-              <img src="https://i.postimg.cc/prpyV4mH/clock-selection-no-bg.png" alt="clock" class="small-image"/>
-              <p>3 days left</p>
-            </div>
-          </div>
-        </main>
-        <div class="card-attribute">
-          <img src="https://i.postimg.cc/SQBzNQf1/image-avatar.png" alt="avatar" class="small-avatar"/>
-          <p>Creation of <span><a href="#">Jules Wyvern</a></span></p>
-        </div>
-      </div>
-  
-  
-
-    <div class="card-container">
-        <a href="/" class="hero-image-container">
-          <img class="hero-image" src="https://i.postimg.cc/NfR2yhNs/image-equilibrium.jpg" alt="Spinning glass cube"/>
-        </a>
-        <main class="main-content">
-          <h1><a href="#">Equilibrium #3429</a></h1>
-          <p>Our Equilibrium collection promotes balance and calm.</p>
-          <div class="flex-row">
-            <div class="coin-base">
-              <img src="https://i.postimg.cc/T1F1K0bW/Ethereum.png" alt="Ethereum" class="small-image"/>
-              <h2>0.041 ETH</h2>
-            </div>
-            <div class="time-left">
-              <img src="https://i.postimg.cc/prpyV4mH/clock-selection-no-bg.png" alt="clock" class="small-image"/>
-              <p>3 days left</p>
-            </div>
-          </div>
-        </main>
-        <div class="card-attribute">
-          <img src="https://i.postimg.cc/SQBzNQf1/image-avatar.png" alt="avatar" class="small-avatar"/>
-          <p>Creation of <span><a href="#">Jules Wyvern</a></span></p>
-        </div>
-      </div>
-  
-    
-  </body>
+    </main>
+    <div class="card-attribute">
+      <img src="https://i.postimg.cc/SQBzNQf1/image-avatar.png" alt="avatar" class="small-avatar"/>
+      <p>Profesor ID: <span>{{ course.teacher_id }}</span></p>
+    </div>
+  </div>
+</body>
