fix cypress functions

--- a/front/src/app/views/register/register.component.html
+++ b/front/src/app/views/register/register.component.html
@@ -62,7 +62,7 @@
         </div>
 
         <div class="button-group">
-          <button type="submit" class="btn" [disabled]="registerForm.invalid">Registrar</button>
+          <button type="submit" id="btn-formRegister" class="btn" [disabled]="registerForm.invalid">Registrar</button>
         </div>
 
         <hr />
