--- a/front/src/app/core/side-bar/side-bar.component.css
+++ b/front/src/app/core/side-bar/side-bar.component.css
@@ -1,4 +1,17 @@
+/*PALETA DE COLORES*/
+:root {
+  --color-violeta: #6564cc;
+  --color-azul: #00339e;
+  --color-azul-oscuro: #010163;
+  --color-naranja: #fc6a07;
+}
 
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
   .sidebar {
     width: 250px;
     background-color: #00339E;
