se completa funcionalidad para filtrar role en el componente 'ver curso'

--- a/front/src/app/views/createUserRole/create-user-role.component.html
+++ b/front/src/app/views/createUserRole/create-user-role.component.html
@@ -65,7 +65,7 @@
                 <p>{{c.description}}</p>
                 <p>{{c.course_id}}</p>
 
-                <button type="submit" (click)="addTeacherToCourse(c.course_id)">Asignar rol docente</button>
+                <button type="submit" (click)="addTeacherToCourse(c.course_id)">Asignar curso al docente</button>
 
 
             </div>
